scrollbar and added another network to stopicon

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,3 +74,22 @@ body {
   position: absolute;
   display: none;
 }
+
+/* scrollbar */
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #3b3b3b;
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
+  background-color: #3b3b3b;
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: #555;
+}
